[package]
name = "vodo"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/blu3beri/vodo"
license = "MIT"
readme = "README.md"
keywords = ["cli", "tui", "todo"]
categories = ["cli", "tui"]
description = "Vodo is a todo and note manager"

[workspace]
members = ["packages/*"]

[[bin]]
name = "vodo"
path = "packages/cli/src/main.rs"

[dependencies]

[dependencies.serde]
version = "1.0.137"
features = ["derive"]
