[package]
name = "vodo"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/blu3beri/vodo"
license = "MIT"
readme = "README.md"
keywords = ["tui", "todo"]
categories = ["tui"]
description = "Vodo is a todo and note manager"

[workspace]
members = ["packages/*"]

[[bin]]
name = "vodo"
path = "packages/tui/src/main.rs"

[dependencies]
backend = { path = "packages/backend" }
tui = "0.18"
crossterm = "0.23"
chrono = "0.4"
